--- a/public/styles.css
+++ b/public/styles.css
@@ -48,14 +48,14 @@ button {
     margin-left: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color: #800080;
     color: white;
     cursor: pointer;
     font-size: 1em;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #8B008B;
 }
 
 #result {
